# TCPSocketProgrammingPOC

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  ReadME.md  vcpkg.json
Client/: Client.cpp
Common/: Message.hpp  ThreadSafeQueue.hpp
Server/: Server.cpp
